--- a/assessment.html
+++ b/assessment.html
@@ -9,7 +9,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <title>NaoyaYamamoto-moonが作ったいいところ診断</title>
 </head>
-<body>
+<body class="bg-primary-sabtle">
+  <header>
+    <nav class="navbar bg-primary" data-bs-theme="dark">
+      <div class="container-fruid">
+        <a class="navbar-brand" href="#">いいとこ診断</a>
+      </div>
+    </nav>
+  </header>
   <h1>あなたのいいところは？</h1>
   <p>診断したい名前を入れてください</p>
   <input type="text" id="user-name" size="40" maxlength="20">
